# ode-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
examples/: README.md  exponential_decay.cpp  harmonic_oscillator.cpp  lorenz.cpp  solver_comparison.cpp
include/ode/: euler.hpp  rk2.hpp  rk4.hpp  rk45.hpp  solver.hpp  types.hpp
src/: main.cpp
src/ode/: euler.cpp  rk2.cpp  rk4.cpp  rk45.cpp
tests/: CMakeLists.txt  test_analytical.cpp  test_convergence.cpp  test_harmonic.cpp  test_main.cpp
